--- a/lang/divi-image-overlay.pot
+++ b/lang/divi-image-overlay.pot
@@ -3,7 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Divi Image Overlay 1.0\n"
-"Report-Msgid-Bugs-To: https://github.com/jonathanbossenger/WordPress-Plugin-Shell\n"
+"Report-Msgid-Bugs-To: http://atlanticwave.co\n"
 "POT-Creation-Date: 2016-03-29 11:28:06+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,13 +17,13 @@ msgid "Divi Image Overlay"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "http://www.psykrotek.co.za/"
+msgid "http://atlanticwave.co/"
 msgstr ""
 
 #. Author of the plugin/theme
-msgid "Jonathan Bossenger"
+msgid "Atlantic Wave"
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "http://www.psykrotek.co.za/"
+msgid "http://atlanticwave.co/"
 msgstr ""
